syntax = "proto3";

import "driver_proto.proto";

option java_package = "org.bitlap.network";
option java_multiple_files = true;
option java_outer_classname = "DriverService";

service DriverService {
  /**
   * TODO 除了这些底层driver RPC，还需一个bitlap rpc
   */

  rpc OpenSession (BOpenSessionReq) returns (BOpenSessionResp) {}

  rpc CloseSession (BCloseSessionReq) returns (BCloseSessionResp) {}

  rpc ExecuteStatement (BExecuteStatementReq) returns (BExecuteStatementResp) {}

  rpc FetchResults (BFetchResultsReq) returns (BFetchResultsResp) {}

  rpc GetDatabases (BGetDatabasesReq) returns (BGetDatabasesResp) {}

  rpc GetTables (BGetTablesReq) returns (BGetTablesResp) {}

  rpc GetResultSetMetadata (BGetResultSetMetadataReq) returns (BGetResultSetMetadataResp) {}

  rpc GetLeader (BGetLeaderReq) returns (BGetLeaderResp) {}

  rpc CancelOperation (BCancelOperationReq) returns (BCancelOperationResp) {}

  rpc CloseOperation (BCloseOperationReq) returns (BCloseOperationResp) {}

  rpc GetOperationStatus (BGetOperationStatusReq) returns (BGetOperationStatusResp) {}

  rpc GetInfo(BGetInfoReq) returns (BGetInfoResp) {}

}